--- a/Views/Libros/GenerosRemover.cshtml
+++ b/Views/Libros/GenerosRemover.cshtml
@@ -42,7 +42,7 @@
     </div>
 
     <div class="text-center mt-3">
-        <button id="btnEnviar" type="submit" class="btn btn-sm btn-danger">Remover</button>
+        <button id="btnEnviar" type="submit" class="btn btn-sm btn-primary">Remover</button>
         <a class="btn btn-sm btn-outline-secondary" asp-action="Generos" asp-route-id="@Model.Libro?.LibroId" title="Cancelar">Cancelar</a>
     </div>
 </form>
