--- a/Views/Auth/Index.cshtml
+++ b/Views/Auth/Index.cshtml
@@ -6,7 +6,7 @@
 <form asp-action="Index">
     <div class="card mx-auto" style="max-width: 500px;">
         <div class="card-body">
-            <h1 class="h-3 text-center text-danger">Bienvenido a Libreria Online</h1>
+            <h1 class="h-3 text-center text-primary">Bienvenido a Libreria Fei</h1>
             <h2 class="h-6 text-center text-secondary-emphasis">Facultad de Estadística e Informática</h2>
             <h5 class="card-card-title text-center mt-4">@ViewData["Title"]</h5>
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -15,15 +15,18 @@
                 <label asp-for="Email" class="form-label"></label>
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
-            <div class="form-floating mb-3">
-                <input asp-for="Password" type="password" class="form-control" placeholder="Password" />
+            <div class="form-floating mb-3 position-relative">
+                <input asp-for="Password" type="password" class="form-control" placeholder="Password" id="passwordInput" />
                 <label asp-for="Password" class="form-label"></label>
                 <span asp-validation-for="Password" class="text-danger"></span>
+                <button type="button" class="btn position-absolute top-50 end-0 translate-middle-y" id="togglePasswordVisibility" style="z-index: 2;">
+                    <i class="bi bi-eye" id="eyeIcon"></i>
+                </button>
             </div>
             <p class="card-text small">Ingrese sus credenciales para poder disfrutar del contenido de la plataforma.</p>
         </div>
         <div class="card-footer text-center">
-            <button type="submit" class="btn btn-danger">Iniciar sesión</button>
+            <button type="submit" class="btn btn-primary">Iniciar sesión</button>
         </div>
     </div>
 </form>
@@ -31,3 +34,19 @@
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
+
+<script>
+    document.getElementById('togglePasswordVisibility').addEventListener('click', function() {
+    var passwordInput = document.getElementById('passwordInput');
+    var eyeIcon = document.getElementById('eyeIcon');
+    if (passwordInput.type === "password") {
+        passwordInput.type = "text";
+        eyeIcon.classList.remove('bi-eye');
+        eyeIcon.classList.add('bi-eye-slash');
+    } else {
+        passwordInput.type = "password";
+        eyeIcon.classList.remove('bi-eye-slash');
+        eyeIcon.classList.add('bi-eye');
+    }
+});
+</script>
