--- a/Views/Generos/Editar.cshtml
+++ b/Views/Generos/Editar.cshtml
@@ -34,7 +34,7 @@
     </div>
 
     <div class="text-center mt-3">
-        <button id="btnEnviar" type="submit" class="btn btn-sm btn-danger">Guardar</button>
+        <button id="btnEnviar" type="submit" class="btn btn-sm btn-primary">Guardar</button>
         <a class="btn btn-sm btn-outline-secondary" asp-action="Index" title="Cancelar">Cancelar</a>
     </div>
 </form>
