--- a/Views/Libros/Crear.cshtml
+++ b/Views/Libros/Crear.cshtml
@@ -52,7 +52,7 @@
         </div>
     </div>
     <div class="text-center mb-5">
-        <button id="btnEnviar" type="submit" class="btn btn-sm btn-danger">Guardar</button>
+        <button id="btnEnviar" type="submit" class="btn btn-sm btn-primary">Guardar</button>
         <a class="btn btn-sm btn-outline-secondary" asp-action="Index" title="Cancelar">Cancelar</a>
     </div>
 </form>
