--- a/Views/Libros/Eliminar.cshtml
+++ b/Views/Libros/Eliminar.cshtml
@@ -19,7 +19,7 @@
 <partial name="_CardPartial" model="Model" />
 <form asp-action="Eliminar">
     <div class="text-center mt-3">
-        <button id="btnEnviar" type="submit" class="btn btn-sm btn-danger">Eliminar</button>
+        <button id="btnEnviar" type="submit" class="btn btn-sm btn-primary">Eliminar</button>
         <a class="btn btn-sm btn-outline-secondary" asp-action="Index" title="Cancelar">Cancelar</a>
     </div>
 </form>
