--- a/Views/Libros/GenerosAgregar.cshtml
+++ b/Views/Libros/GenerosAgregar.cshtml
@@ -35,7 +35,7 @@
         </div
     </div>
     <div class="text-center mt-3">
-        <button id="btnEnviar" type="submit" class="btn btn-sm btn-danger">Agregar</button>
+        <button id="btnEnviar" type="submit" class="btn btn-sm btn-primary">Agregar</button>
         <a class="btn btn-sm btn-outline-secondary" asp-action="Generos" asp-route-id="@Model.Libro?.LibroId" title="Cancelar">Cancelar</a>
     </div>
 </form>
